--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9ff31990",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections import Counter\n"
+    "from collections import Counter"
    ]
   },
   {
